--- a/index.html
+++ b/index.html
@@ -33,17 +33,19 @@
 		</ul>
 	</nav>
 
-	<nav class="menu navbar navbar-toggleable-md navbar-light bg-faded">
+	<nav class="top-nav navbar navbar-toggleable-md navbar-light bg-faded">
 		<div class="collapse navbar-collapse" id="navbarNavDropdown">
 			<ul class="navbar-nav">
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						<i class="fa fa-menu"
+						<i class="fa fa-bars"></i>
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						<a class="dropdown-item" href="#">Action</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<a class="dropdown-item" href="#">Something else here</a>
+						<a class="dropdown-item active" href="#">Home</a>
+						<a class="dropdown-item" href="#services">Services</a>
+						<a class="dropdown-item" href="#portfolio">Portfolio</a>
+						<a class="dropdown-item" href="#recentposts">Blog</a>
+						<a class="dropdown-item" href="#contact">Contact</a>
 					</div>
 				</li>
 			</ul>
@@ -86,21 +88,21 @@
 	<section id="services">
 		<div class="container">
 			<div class="col-md-4 text-center">
-				<img class="rounded" src="images/desktop.png">
+				<img class="rounded img-responsive" src="images/desktop.png">
 				<h1>Flat Design</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
 
 				<div class="col-md-4 text-center">
-					<img class="rounded" src="images/lightbulb.png">
+					<img class="rounded img-responsive" src="images/lightbulb.png">
 					<h1>Great Ideas</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</div>
 
 					<div class="col-md-4 text-center">
-						<img class="rounded" src="images/browser.jpg">
+						<img class="rounded img-responsive" src="images/browser.jpg">
 						<h1>Browser Compatibility</h1>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua.</p>
