--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<!-- NAVIGATION -->
-	<nav class="top-nav nav">
+	<nav class="top-nav nav hidden-tablet hidden-phone">
 		<div class="nav">
 			<i class="fa fa-heart fa-2x"></i>
 			<span>COLORFUL FLAT</span>
@@ -33,76 +33,78 @@
 		</ul>
 	</nav>
 
-	<nav class="top-nav navbar navbar-toggleable-md navbar-light bg-faded">
-		<div class="collapse navbar-collapse" id="navbarNavDropdown">
-			<ul class="navbar-nav">
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						<i class="fa fa-bars"></i>
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						<a class="dropdown-item active" href="#">Home</a>
-						<a class="dropdown-item" href="#services">Services</a>
-						<a class="dropdown-item" href="#portfolio">Portfolio</a>
-						<a class="dropdown-item" href="#recentposts">Blog</a>
-						<a class="dropdown-item" href="#contact">Contact</a>
-					</div>
-				</li>
+	<nav class="top-nav navbar menu hidden-sm-up">
+		<div class="dropdown">
+			<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<i class="fa fa-bars fa-2x"></i>
+			</a>
+			<ul class="dropdown-menu">
+				<li><a href="#">Home</a></li>
+				<li><a href="#services">Services</a></li>
+				<li><a href="#portfolio">Porfolio</a></li>
+				<li><a href="#recentposts">Blog</a></li>
+				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</div>
 	</nav>
 
 	<!-- CAROUSEL -->
 	<section>
-		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
 			<!-- Indicators -->
 			<ol class="carousel-indicators">
-				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1"></li>
+				<li data-target="#myCarousel" data-slide-to="2"></li>
 			</ol>
 
 			<!-- Wrapper for slides -->
-			<div class="carousel-inner" role="listbox">
+			<div class="carousel-inner">
 				<div class="item active">
-					<img class="img-responsive" src="http://placehold.it/1600x500" alt="Template">
+					<img src="http://placehold.it/1600x600" alt="Image 1">
 				</div>
+
 				<div class="item">
-					<img class="img-responsive" src="http://placehold.it/1600x500" alt="Template 2">
+					<img src="http://placehold.it/1600x600" alt="Image 2">
+				</div>
+
+				<div class="item">
+					<img src="http://placehold.it/1600x600" alt="Image 3">
 				</div>
 			</div>
 
-			<!-- Controls -->
-			<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			<!-- Left and right controls -->
+			<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left"></span>
 				<span class="sr-only">Previous</span>
 			</a>
-			<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			<a class="right carousel-control" href="#myCarousel" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right"></span>
 				<span class="sr-only">Next</span>
 			</a>
 		</div>
+
 	</section>
 
 	<!-- SERVICES -->
 	<section id="services">
 		<div class="container">
 			<div class="col-md-4 text-center">
-				<img class="rounded img-responsive" src="images/desktop.png">
+				<img class="rounded" src="images/desktop.png">
 				<h1>Flat Design</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
 
 				<div class="col-md-4 text-center">
-					<img class="rounded img-responsive" src="images/lightbulb.png">
+					<img class="rounded" src="images/lightbulb.png">
 					<h1>Great Ideas</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</div>
 
 					<div class="col-md-4 text-center">
-						<img class="rounded img-responsive" src="images/browser.jpg">
+						<img class="rounded" src="images/browser.jpg">
 						<h1>Browser Compatibility</h1>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -493,7 +495,16 @@
 				</footer>
 			</section>
 
+			<!-- JQuery -->
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 			<!-- Latest compiled and minified JavaScript -->
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+
+
+			<!-- CUSTOM JS -->
+			<script type="text/javascript" src="js/main.js"></script>
 		</body>
 		</html>
