--- a/index.html
+++ b/index.html
@@ -25,26 +25,31 @@
 		</div>
 
 		<ul class="nav nav-pills hidden-xs hidden-sm">
-			<li role="presentation" class="active"><a href="#">Home</a></li>
+			<li role="presentation"><a href="#">Home</a></li>
 			<li role="presentation"><a href="#services">Services</a></li>
 			<li role="presentation"><a href="#portfolio">Portfolio</a></li>
+			<li role="presentation"><a href="#team">Team</a></li>
 			<li role="presentation"><a href="#recentposts">Blog</a></li>
 			<li role="presentation"><a href="#contact">Contact</a></li>
 		</ul>
 
-		<div class="nav dropdown menu hidden-md hidden-lg">
-			<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				<i class="fa fa-bars fa-2x"></i>
-			</a>
-			<ul class="dropdown-menu">
-				<li><a href="#">Home</a></li>
-				<li><a href="#services">Services</a></li>
-				<li><a href="#portfolio">Porfolio</a></li>
-				<li><a href="#recentposts">Blog</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</div>
 	</nav>
+
+	<div class="nav menu dropdown hidden-md hidden-lg">
+		<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			<i class="fa fa-bars fa-2x"></i>
+		</a>
+
+		<ul class="dropdown-menu dropdown-menu-right">
+			<li><a href="#">Home</a></li>
+			<li><a href="#services">Services</a></li>
+			<li><a href="#portfolio">Porfolio</a></li>
+			<li><a href="#team">Team</a></li>
+			<li><a href="#recentposts">Blog</a></li>
+			<li><a href="#contact">Contact</a></li>
+		</ul>
+
+	</div>
 
 	
 
@@ -61,15 +66,15 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img class="img-responsive" src="http://placehold.it/1600x600" alt="Image 1">
+					<img src="http://placehold.it/1600x700" alt="Image 1">
 				</div>
 
 				<div class="item">
-					<img class="img-responsive" src="http://placehold.it/1600x600" alt="Image 2">
+					<img src="http://placehold.it/1600x700" alt="Image 2">
 				</div>
 
 				<div class="item">
-					<img class="img-responsive" src="http://placehold.it/1600x600" alt="Image 3">
+					<img src="http://placehold.it/1600x700" alt="Image 3">
 				</div>
 			</div>
 
@@ -119,7 +124,7 @@
 	<section id="portfolio">
 		<div class="container-fluid text-center">
 			<div class="header container-fluid text-center">
-				<div class="row-fluid col-md-4 col-md-offset-4">
+				<div class="row-fluid col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
 					<h1 class="section-heading">
 						RECENT WORKS
 					</h1>
@@ -131,17 +136,31 @@
 				</div>
 			</div>
 
-			<div class="container text-center">
+			<div class="container text-center hidden-sm hidden-xs">
 				<div class="row col-md-6 col-md-offset-4 portfolio-btns text-center">
 					<ul class="nav nav-pills">
-						<li role="presentation" class="active"><a href="#">ALL</a></li>
-						<li role="presentation"><a href="#">WEB</a></li>
-						<li role="presentation"><a href="#">MOBILE</a></li>
-						<li role="presentation"><a href="#">PHOTOGRAPHY</a></li>
-						<li role="presentation"><a href="#">DESIGN</a></li>
-						<li role="presentation"><a href="#">TYPE</a></li>
+						<li role="presentation"><a href="#portfolio">ALL</a></li>
+						<li role="presentation"><a href="#portfolio">WEB</a></li>
+						<li role="presentation"><a href="#portfolio">MOBILE</a></li>
+						<li role="presentation"><a href="#portfolio">PHOTOGRAPHY</a></li>
+						<li role="presentation"><a href="#portfolio">DESIGN</a></li>
+						<li role="presentation"><a href="#portfolio">TYPE</a></li>
 					</ul>
 				</div>
+			</div>
+
+			<div class="dropdown hidden-md hidden-lg">
+				<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					ALL
+				</button>
+				<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+					<button class="btn btn-secondary dropdown-item" type="button">WEB</button>
+					<button class="btn dropdown-item" type="button">MOBILE</button>
+					<button class="btn dropdown-item" type="button">PHOTOGRAPHY</button>
+					<button class="btn dropdown-item" type="button">DESIGN</button>
+					<button class="btn dropdown-item" type="button">TYPE</button>
+				</div>
+
 			</div>
 
 
@@ -223,7 +242,7 @@
 	<section id="team">
 		<div class="container-fluid text-center">
 			<div class="header container-fluid text-center">
-				<div class="row-fluid col-md-4 col-md-offset-4">
+				<div class="row-fluid col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
 					<h1 class="section-heading">
 						MEET OUR TEAM
 					</h1>
@@ -235,7 +254,7 @@
 				</div>
 			</div>
 
-			<div class="container-fluid text-center">
+			<div class="team-pics container-fluid text-center">
 				<div class="row">
 					<div class="col-xs-18 col-sm-4 col-md-2 col-md-offset-3">
 						<div class="thumbnail">
@@ -323,7 +342,7 @@
 		<section id="recentposts">
 			<div class="container-fluid text-center">
 				<div class="header container-fluid text-center">
-					<div class="row-fluid col-md-4 col-md-offset-4">
+					<div class="row-fluid col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
 						<h1 class="section-heading">
 							RECENT POSTS
 						</h1>
@@ -425,7 +444,7 @@
 			<!-- CONTACT -->
 			<section id="contact">
 				<div class="container-fluid text-center">
-					<div class="row-fluid col-md-4 col-md-offset-4">
+					<div class="row-fluid col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
 						<h1 class="section-heading">
 							CONTACT US
 						</h1>
@@ -464,7 +483,7 @@
 				<!-- FOOTER -->
 				<footer class="container-fluid">
 					<!-- SOCIAL MEDIA ICONS -->
-					<div class="container col-md-8 col-sm-4 col-xs-12 col-md-offset-2">
+					<div class="container col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1">
 						<hr />
 						<div class="facebook text-center">
 							<a href="">
@@ -489,7 +508,7 @@
 
 
 						<div class="footer-text text-right">
-							<span class="footer-text">WEB DESIGN</span> <span>COPYRIGHT &copy; DANUBE PHAN 2017</span>
+							<span class="footer-text">WEB DESIGN</span><br> <span>COPYRIGHT &copy; DANUBE PHAN 2017</span>
 						</div>
 					</div>
 				</footer>
